--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,13 +23,12 @@
         </nav>
     </div>
     
-
     <!--Intro-->
     <div class="intro" id="intros">
         <div class="intro-item">
             <div class="intro-fonts">
                 <h1>HANS CHRISTIAN HANDOTO</h1>
-                <h2>Undergraduate Information Technology</h2>
+                <h2>Information Engineering Student</h2>
             </div>
             <video autoplay loop muted>
                 <source src="src\Background.mp4" type="video/mp4">
@@ -38,38 +37,79 @@
         </div>
     </div>
 
+   <!-- About Me -->
+    <div class="about" id="about">
+        <div class="about-item">
+            <h1>ABOUT ME</h1>
+            <p>
+                Hello, I'm Hans Christian Handoto. I am currently an undergraduate student in Informatics Engineering at 
+                Tarumanagara University. I have had the opportunity to lead and teach a class for approximately six months, 
+                which has greatly enhanced my leadership and instructional skills. 
+                <span class="highlight">
+                    My technical skills span across a range of areas, including full-stack web development, mobile app development, and game design. 
+                    I am proficient in tools such as Adobe Photoshop, Premiere Pro, and Figma, and have hands-on experience with programming languages 
+                    like C++ and Java. In addition to my technical abilities, I am also experienced in graphic design, photo and video editing, and copywriting.
+                </span> 
+                I have engaged in various volunteer and leadership roles, such as coordinating events and managing teams. 
+                My passion for integrating design with technology drives my approach to creating innovative and user-friendly solutions.
+            </p>
+        </div>
+    </div>
+
+
     <!--Academic-->
     <div class="academic" id="academics">
         <h1>ACADEMIC</h1>
-        <div class="academic-item">
-            <div class="academic-item-child">
-                <a href="#"><img src="src/BudiMulia.png" alt="Budi Mulia"></a>
-                <p>Student [2017 - 2019]</p>
+        <div class="animate-on-scroll slide-up">
+            <div class="academic-item">
+                <div class="colorized" style="transition-delay: 0.5s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/BudiMulia.png" alt="Budi Mulia"></a>
+                        <p>Student [2017 - 2019]</p>
+                    </div>
+                </div>
+                <div class="colorized" style="transition-delay: 0.6s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/SMAN19.png" alt="SMAN19"></a>
+                        <p>Science & Mathematics [2019 - 2022]</p>
+                    </div>
+                </div>
+                <div class="colorized" style="transition-delay: 0.7s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/UNTAR.png" alt="UNTAR"></a>
+                        <p>Information Technology [2022 - Now]</p>
+                    </div>
+                </div>
             </div>
-            <div class="academic-item-child">
-                <a href="#"><img src="src/SMAN19.png" alt="SMAN19"></a>
-                <p>Science & Mathematics [2019 - 2022]</p>
-            </div>
-            <div class="academic-item-child">
-                <a href="#"><img src="src/UNTAR.png" alt="UNTAR"></a>
-                <p>Information Technology [2022 - Now]</p>
-            </div>
-            <div class="academic-item-child">
-                <a href="#"><img src="src/Skilvul.png" alt="Skilvul"></a>
-                <p>Data Structure using Python [2024]</p>
-            </div>
-            <div class="academic-item-child">
-                <a href="#"><img src="src/RedHat.png" alt="Redhat"></a>
-                <p>Red Hat System Administration I (RH124) [2023]</p>
-            </div>
-            <div class="academic-item-child">
-                <a href="#"><img src="src/Huawei.png" alt="Huawei"></a>
-                <p>HCIA - Cloud Service V3.0 [2023]</p>
-                <p>HCIA - AI V3.0 [2023]</p>
-            </div>
-            <div class="academic-item-child">
-                <a href="#"><img src="src/Udemy.png" alt="Udemy"></a>
-                <p>Basic Data Science using Python [2023]</p>
+        </div>
+        <h1>COURSE</h1>
+        <div class="animate-on-scroll slide-up">
+            <div class="academic-item">
+                <div class="colorized" style="transition-delay: 0.5s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/Skilvul.png" alt="Skilvul"></a>
+                        <p>Data Structure using Python [2024]</p>
+                    </div>
+                </div>
+                <div class="colorized" style="transition-delay: 0.6s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/RedHat.png" alt="Redhat"></a>
+                        <p>Red Hat System Administration I (RH124) [2023]</p>
+                    </div>
+                </div>
+                <div class="colorized" style="transition-delay: 0.7s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/Huawei.png" alt="Huawei"></a>
+                        <p>HCIA - Cloud Service V3.0 [2023]</p>
+                        <p>HCIA - AI V3.0 [2023]</p>
+                    </div>
+                </div>
+                <div class="colorized" style="transition-delay: 0.5s">
+                    <div class="academic-item-child">
+                        <a href="#"><img src="src/Udemy.png" alt="Udemy"></a>
+                        <p>Basic Data Science using Python [2023]</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -77,52 +117,86 @@
     <!--Experience-->
     <div class="experience" id="experiences">
         <h1>EXPERIENCE</h1>
-        <div class="experience-item">
-            <div class="experience-item-child">
-                <img src="src/UNTAR.png" alt="Varanity">
-                <div class="experience-item-child-text">
-                    <h2>Data Structure Lecturer Assistant</h2>
-                    <h3>[2024 - Now]</h3>
-                    <ul>
-                        <li>Lab Instructure</li>
-                    </ul>
+        <div class="animate-on-scroll slide-right">
+            <div class="experience-item">
+                <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s"><img src="src/POUT.png" alt="POUT"></div>
+                    <div class="animate-on-scroll slide-right">
+                        <div class="experience-item-child-text">
+                            <h2>Persekutuan Oikumene Universitas Tarumanagara</h2>
+                            <h3>[2023 - Now]</h3>
+                            <div class="lighten">
+                                <ul>
+                                    <li>BPH 2023/2024 | Prayer Division</li>
+                                    <li>PMB POUT 23 | Business Funds Division</li>
+                                    <li>Christmas POUT 23 | Equipment Division</li>
+                                    <li>Easter POUT 24 | Volunteer</li>
+                                    <li>Social Service POUT 24 | Equipment Division</li>
+                                    <li>KK POUT 23 | Volunteering as Interviewer </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="experience-item-child">
-                <img src="src/POUT.png" alt="Varanity">
-                <div class="experience-item-child-text">
-                    <h2>Persekutuan Oikumene Universitas Tarumanagara</h2>
-                    <h3>[2023 - Now]</h3>
-                    <ul>
-                        <li>BPH 2023/2024 | Prayer Division</li>
-                        <li>PMB POUT 2023 | Business Funds Division</li>
-                        <li>Christmas 2023 | Equipment Division</li>
-                        <li>Easter 2024 | Volunteer</li>
-                    </ul>
+                <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s"><img src="src/Everyone.png" alt="Everyone Asia 2024"></div>
+                    <div class="animate-on-scroll slide-right">
+                        <div class="experience-item-child-text">
+                            <h2>Everyone Asia 2024</h2>
+                            <h3>[2024]</h3>
+                            <div class="lighten">
+                                <ul>
+                                    <li>Food and Beverage Member</li>
+                                </ul>
+                            </div>
+                        </div>                    
+                    </div>
                 </div>
-            </div>
-            <div class="experience-item-child">
-                <img src="src/Varanity.png" alt="Varanity">
-                <div class="experience-item-child-text">
-                    <h2>Varanity</h2>
-                    <h3>[2023 - Now]</h3>
-                    <ul>
-                        <li>Graphic Designer</li>
-                        <li>Creative</li>
-                        <li>Editor</li>
-                    </ul>
+                <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s"><img src="src/UNTAR.png" alt="UNTAR"></div>
+                    <div class="animate-on-scroll slide-right">
+                        <div class="experience-item-child-text">
+                            <h2>Data Structure Lecturer Assistant</h2>
+                            <h3>[2024]</h3>
+                            <div class="lighten">
+                                <ul>
+                                    <li>Lab Instructure</li>
+                                </ul>
+                            </div>
+                        </div>                    
+                    </div>
                 </div>
-            </div>
-            <div class="experience-item-child">
-                <img src="src/Pixorse.png" alt="Pixorse">
-                <div class="experience-item-child-text">
-                    <h2>NFT Pixorse</h2>
-                    <h3>[2023]</h3>
-                    <ul>
-                        <li>Graphic Designer</li>
-                        <li>Creative</li>
-                        <li>Copywriter</li>
-                    </ul>
+                <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s"><img src="src/Varanity.png" alt="Varanity"></div>
+                    <div class="animate-on-scroll slide-right">
+                        <div class="experience-item-child-text">
+                            <h2>Varanity</h2>
+                            <h3>[2023 - Now]</h3>
+                            <div class="lighten">
+                                <ul>
+                                    <li>Graphic Designer</li>
+                                    <li>Creative</li>
+                                    <li>Editor</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s"></div><img src="src/Pixorse.png" alt="Pixorse">
+                    <div class="animate-on-scroll slide-right">
+                        <div class="experience-item-child-text">
+                            <h2>NFT Pixorse</h2>
+                            <h3>[2023]</h3>
+                            <div class="lighten">
+                                <ul>
+                                    <li>Graphic Designer</li>
+                                    <li>Creative</li>
+                                    <li>Copywriter</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -165,7 +239,7 @@
 
     <!--Footer-->
     <footer class="footer" id="contacts">
-        <h3>CONTACTS</h3>
+        <h3>Social Media</h3>
         <div>
             <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
