--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,10 +30,11 @@
                 <h1>HANS CHRISTIAN HANDOTO</h1>
                 <h2>Information Engineering Student</h2>
             </div> 
-            <video autoplay loop muted>
+            <img src="src\Backgrounds.jpg" alt="Background">
+            <!--<video autoplay loop muted>
                 <source src="src\Background.mp4" type="video/mp4">
                 Your browser does not support the video tag.
-            </video>
+            </video>-->
         </div>
     </div>
 
