Adding github and leetcode stats

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,11 +30,10 @@
                 <h1>HANS CHRISTIAN HANDOTO</h1>
                 <h2>Information Engineering Student</h2>
             </div> 
-            <img src="src\Backgrounds.jpg" alt="Background">
-            <!--<video autoplay loop muted>
+            <video autoplay loop muted>
                 <source src="src\Background.mp4" type="video/mp4">
                 Your browser does not support the video tag.
-            </video>-->
+            </video>
         </div>
     </div>
 
@@ -206,6 +205,14 @@
     <!--Project-->
     <div class="project" id="projects">
         <h1>PROJECT</h1>
+        <div class="stats"> 
+            <div class="github">
+                <a href="https://github.com/Alpucap/CVHans"><img src="https://github-readme-stats.vercel.app/api?username=Alpucap&show_icons=true&bg_color=2b2b2b&text_color=F1F1F1&hide_border=true" alt="GitHub Stats"></a>
+            </div>
+            <div class="leetcode">
+                <a href="https://leetcode.com/u/alpucaps/"><img src="https://leetcode-stats.vercel.app/api?username=alpucaps&show_icons=true&bg_color=2b2b2b&text_color=F1F1F1&hide_border=true" alt="LeetCode Stats"></a>
+            </div>
+        </div>
         <div class="project-item">
             <div class="carousel">
                 <div class="track">
@@ -240,7 +247,7 @@
 
     <!--Footer-->
     <footer class="footer" id="contacts">
-        <h3>Social Media</h3>
+        <h1>Social Media</h1>
         <div>
             <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
