--- a/public/css/home.css
+++ b/public/css/home.css
@@ -134,7 +134,6 @@ nav {
 .intro-fonts{
     position: absolute;
     z-index: 1;
-    mix-blend-mode: difference;
 }
 .intro-item h1{
     font-size: 5rem;
@@ -143,21 +142,13 @@ nav {
     margin-top: 50px;
 }
 
-.intro-item img{
+.intro-item video{
     max-height: auto;
     width: 100%;
     position: relative;
     z-index: -1;
     filter:brightness(50%) contrast(110%) saturate(90%);
 }
-
-/*.intro-item video{
-    max-height: auto;
-    width: 100%;
-    position: relative;
-    z-index: -1;
-    filter:brightness(50%) contrast(110%) saturate(90%);
-}*/
 
 .intro-item h2{
     font-size: 2rem;
@@ -380,6 +371,43 @@ li::before {
     letter-spacing: 5px;
 }
 
+.stats{
+    display: flex;
+    flex-direction: row;
+    margin: 10px 20px;
+    gap: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.github {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.github img {
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
+}
+
+.leetcode {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.leetcode img {
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
+}
+
 .carousel {
     position: relative;
     width: 100%;
@@ -497,10 +525,10 @@ li::before {
     position: relative;
 }
 
-.footer h3{
+.footer h1{
     margin: 20px 10px;
     font-weight: 500;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
 }
 
 .footer a {
