--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
         <div class="intro-item">
             <div class="intro-fonts">
                 <h1>HANS CHRISTIAN HANDOTO</h1>
-                <h2>Information Engineering Student</h2>
+                <h2>Informatics Engineering Student</h2>
             </div> 
             <video autoplay loop muted>
                 <source src="src\Background.mp4" type="video/mp4">
@@ -44,39 +44,58 @@
             <p>
                 Hello, I'm Hans Christian Handoto. I am currently an undergraduate student in Informatics Engineering at 
                 Tarumanagara University. I have had the opportunity to lead and teach a class for approximately six months, 
-                which has greatly enhanced my leadership and instructional skills. 
-                <span class="highlight">
-                    My technical skills span across a range of areas, including full-stack web development, mobile app development, and game design. 
-                    I am proficient in tools such as Adobe Photoshop, Premiere Pro, and Figma, and have hands-on experience with programming languages 
-                    like C++ and Java. In addition to my technical abilities, I am also experienced in graphic design, photo and video editing, and copywriting.
-                </span> 
+                which has greatly enhanced my <span class="highlight">problem-solving, time-management, leadership and instructional skills.</span>  
+                My technical skills span across a range of areas, including <span class="highlight">full-stack web development, mobile app development, and UI/UX design.</span>
+                I am proficient in tools such as <span class="highlight">Adobe Photoshop, Premiere Pro, and Figma</span>, and have hands-on experience with programming languages 
+                like <span class="highlight">C++ and Java</span>. In addition to my technical abilities, I am also experienced in graphic design, photo and video editing, and copywriting.
                 I have engaged in various volunteer and leadership roles, such as coordinating events and managing teams. 
                 My passion for integrating design with technology drives my approach to creating innovative and user-friendly solutions.
             </p>
         </div>
+        <div class="stats">
+            <div class="language-proficiency">
+                <p>Indonesia</p>
+                <div class="language-bar">
+                    <div class="bar Indonesia"></div>
+                </div>
+            </div>
+            <div class="language-proficiency">
+                <p>English</p>
+                <div class="language-bar">
+                    <div class="bar English"></div>
+                </div>
+            </div> 
+            <div class="language-proficiency">
+                <p>Japanese</p>
+                <div class="language-bar">
+                    <div class="bar Japanese"></div>
+                </div>
+            </div> 
+        </div>        
     </div>
 
 
     <!--Academic-->
     <div class="academic" id="academics">
+
+        <div class="Deco-blue bubble1"></div>
+        <div class="Deco-blue-shade bubble2"></div>
+        <div class="Deco-blue-shade bubble3"></div>
+        <div class="Deco-blue bubble4"></div>
+        <div class="Deco-blue bubble5"></div>
+
         <h1>ACADEMIC</h1>
         <div class="animate-on-scroll slide-up">
             <div class="academic-item">
-                <div class="colorized" style="transition-delay: 0.5s">
-                    <div class="academic-item-child">
-                        <a href="#"><img src="src/BudiMulia.png" alt="Budi Mulia"></a>
-                        <p>Student [2017 - 2019]</p>
-                    </div>
-                </div>
                 <div class="colorized" style="transition-delay: 0.6s">
                     <div class="academic-item-child">
-                        <a href="#"><img src="src/SMAN19.png" alt="SMAN19"></a>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/SMAN19.png" alt="SMAN19"></a>
                         <p>Science & Mathematics [2019 - 2022]</p>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.7s">
                     <div class="academic-item-child">
-                        <a href="#"><img src="src/UNTAR.png" alt="UNTAR"></a>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/UNTAR.png" alt="UNTAR"></a>
                         <p>Information Technology [2022 - Now]</p>
                     </div>
                 </div>
@@ -87,31 +106,41 @@
             <div class="academic-item">
                 <div class="colorized" style="transition-delay: 0.5s">
                     <div class="academic-item-child">
-                        <a href="#"><img src="src/Skilvul.png" alt="Skilvul"></a>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Skilvul.png" alt="Skilvul"></a>
                         <p>Data Structure using Python [2024]</p>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.6s">
                     <div class="academic-item-child">
-                        <a href="#"><img src="src/RedHat.png" alt="Redhat"></a>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/RedHat.png" alt="Redhat"></a>
                         <p>Red Hat System Administration I (RH124) [2023]</p>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.7s">
                     <div class="academic-item-child">
-                        <a href="#"><img src="src/Huawei.png" alt="Huawei"></a>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Huawei.png" alt="Huawei"></a>
                         <p>HCIA - Cloud Service V3.0 [2023]</p>
                         <p>HCIA - AI V3.0 [2023]</p>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.5s">
                     <div class="academic-item-child">
-                        <a href="#"><img src="src/Udemy.png" alt="Udemy"></a>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Udemy.png" alt="Udemy"></a>
                         <p>Basic Data Science using Python [2023]</p>
                     </div>
                 </div>
+                <div class="colorized" style="transition-delay: 0.5s">
+                    <div class="academic-item-child">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Dicoding.png" alt="Dicoding"></a>
+                        <p>Basic Data Science [2024]</p>
+                        <p>Basic SQL [2024]</p>
+                        <p>Python Programming [2024]</p>
+                    </div>
+                </div>
+
             </div>
         </div>
+
     </div>
 
     <!--Experience-->
@@ -124,30 +153,19 @@
                     <div class="animate-on-scroll slide-right">
                         <div class="experience-item-child-text">
                             <h2>Persekutuan Oikumene Universitas Tarumanagara</h2>
-                            <h3>[2023 - Now]</h3>
                             <div class="lighten">
-                                <ul>
-                                    <li>BPH 2023/2024 | Prayer Division</li>
-                                    <li>PMB POUT 23 | Business Funds Division</li>
-                                    <li>Christmas POUT 23 | Equipment Division</li>
-                                    <li>Easter POUT 24 | Volunteer</li>
-                                    <li>Social Service POUT 24 | Equipment Division</li>
-                                    <li>KK POUT 23 | Volunteering as Interviewer </li>
-                                </ul>
+                                <ul id="POUT-list"></ul>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="experience-item-child">
-                    <div class="blur" style="transition-delay: 0.7s"><img src="src/Everyone.png" alt="Everyone Asia 2024"></div>
+                    <div class="blur" style="transition-delay: 0.7s"><img src="src/Huawei.png" alt="Huawei"></div>
                     <div class="animate-on-scroll slide-right">
                         <div class="experience-item-child-text">
-                            <h2>Everyone Asia 2024</h2>
-                            <h3>[2024]</h3>
+                            <h2>Huawei</h2>
                             <div class="lighten">
-                                <ul>
-                                    <li>Food and Beverage Member</li>
-                                </ul>
+                                <ul id="Everyone-Asia-list"></ul>
                             </div>
                         </div>                    
                     </div>
@@ -156,12 +174,9 @@
                     <div class="blur" style="transition-delay: 0.7s"><img src="src/UNTAR.png" alt="UNTAR"></div>
                     <div class="animate-on-scroll slide-right">
                         <div class="experience-item-child-text">
-                            <h2>Data Structure Lecturer Assistant</h2>
-                            <h3>[2024]</h3>
+                            <h2>Fakultas Teknologi Informasi Universitas Tarumanagara</h2>
                             <div class="lighten">
-                                <ul>
-                                    <li>Lab Instructure</li>
-                                </ul>
+                                <ul id="FTIUNTAR-list"></ul>
                             </div>
                         </div>                    
                     </div>
@@ -171,77 +186,44 @@
                     <div class="animate-on-scroll slide-right">
                         <div class="experience-item-child-text">
                             <h2>Varanity</h2>
-                            <h3>[2023 - Now]</h3>
                             <div class="lighten">
-                                <ul>
-                                    <li>Graphic Designer</li>
-                                    <li>Creative</li>
-                                    <li>Editor</li>
-                                </ul>
+                                <ul id="Varanity-list"></ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="experience-item-child">
-                    <div class="blur" style="transition-delay: 0.7s"></div><img src="src/Pixorse.png" alt="Pixorse">
-                    <div class="animate-on-scroll slide-right">
-                        <div class="experience-item-child-text">
-                            <h2>NFT Pixorse</h2>
-                            <h3>[2023]</h3>
-                            <div class="lighten">
-                                <ul>
-                                    <li>Graphic Designer</li>
-                                    <li>Creative</li>
-                                    <li>Copywriter</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
 
     <!--Project-->
     <div class="project" id="projects">
-        <h1>PROJECT</h1>
-        <div class="stats"> 
-            <div class="github">
-                <a href="https://github.com/Alpucap/CVHans"><img src="https://github-readme-stats.vercel.app/api?username=Alpucap&show_icons=true&bg_color=2b2b2b&text_color=F1F1F1&hide_border=true" alt="GitHub Stats"></a>
-            </div>
-            <div class="leetcode">
-                <a href="https://leetcode.com/u/alpucaps/"><img src="https://leetcode-stats.vercel.app/api?username=alpucaps&show_icons=true&bg_color=2b2b2b&text_color=F1F1F1&hide_border=true" alt="LeetCode Stats"></a>
-            </div>
-        </div>
         <div class="project-item">
             <div class="carousel">
                 <div class="track">
                     <div class="slide">
-                        <img src="src/Web Development.png" alt="Web Dev">
+                        <img src="src/WebDev.png" alt="Web Dev">
                         <div class="slide-text">
-                            <h2>Web Development</h2>
-                            <button><a href="#">Check this out > > ></a></button>
+                            <a href="/webdev"><h2>Web Development</h2></a>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="src/Mobile Development.png" alt="Mob Dev">
+                        <img src="src/DataMining.png" alt="Mob Dev">
                         <div class="slide-text">
-                            <h2>Mobile Development</h2>
-                            <button><a href="#">Check this out > > ></a></button>
+                            <a href="/data"><h2>Data Mining</h2></a>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="src/UI  UX.png" alt="UI/UX"> 
+                        <img src="src/WebDev.png" alt="UI/UX"> 
                         <div class="slide-text">
-                            <h2>UI/UX</h2>
-                            <button><a href="#">Check this out > > ></a></button>
+                            <a href="/webdev"><h2>Web Development</h2></a>
                         </div>
                     </div>
                 </div>
                 <button class="prev">&#8592;</button>
                 <button class="next">&#8594</button>
             </div>
-            
         </div>
     </div>
 
@@ -249,9 +231,9 @@
     <footer class="footer" id="contacts">
         <h1>Social Media</h1>
         <div>
-            <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="mailto:your-email@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>            
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
